# tiny-inkling

./: .gitignore  README.md  REPORT.md  pyproject.toml  requirements.txt
assets/: bonsai_ternary.json
docs/: KAGGLE_RUNBOOK.md
logs/: eval_after.json  eval_before.json  rl_log.jsonl
notebook/: tiny_inkling_run.ipynb
scripts/: common.py  envs.py  eval_agentic.py  grpo.py  make_plots.py  prepare_data.py  pretrain.py  quantize_bonsai.py  rl_agentic.py  sft.py  train_tokenizer.py
src/tiny_inkling/: __init__.py  attention.py  config.py  layers.py  model.py  moe.py  muon.py
tests/: loop_test.py  smoke_test.py
